fixed comment box and position relative spacing

--- a/styles/sass/_contactpage.scss
+++ b/styles/sass/_contactpage.scss
@@ -9,7 +9,7 @@
         .contact-message {
             position: relative;
             top: -35vh;
-            left: 40px;
+            left: 60px;
             z-index: 10;
             form {
                 position: relative;
@@ -18,7 +18,7 @@
         .contact-info {
         width: 30%;
         align-self: center;
-        
+        margin-right: 20px;
             .social-icons {
                 display: flex;
                 i {
