--- a/styles/sass/_form.scss
+++ b/styles/sass/_form.scss
@@ -1,44 +1,58 @@
 
-form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    
-    
-    input[type=email], input[type=text] {
+@mixin form-styling($form-color) {
     width: calc(50% - 20px);
     border: none;
     border-bottom: 2px solid $accent;
     padding: 0 20px 20px;
-    background: $primary-blue;
+    background: $form-color;
     color: $text-color;
-    }
+}
 
-    #comment, #message {
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    textarea {
         width: 100%;
         height: 200px;
         margin-top: 30px;
         border: 2px solid $accent;
+        padding: 20px;
+        color: $text-color;
     }
     button {
        margin: 40px 0;
     }
 }
 
+.blog-form {
+    background: $primary-blue;
+    input[type=email], input[type=text] {
+    @include form-styling($primary-blue);
+    }
+    textarea {
+        background: $primary-blue;
+    }
+}
+    
+
 // CONTACTS PAGE FORM
 
 .contact-message {
-    
     width: 70%;
     form {
         background: $primary-green;
         padding: 60px;
         input[type=email], input[type=text] {
+            @include form-styling($primary-green);
+        }
+        textarea {
             background: $primary-green;
-
         }
         button {
             background: $primary-blue;
+            margin-bottom: 0;
         }
     }
 }
