--- a/styles/styles.css
+++ b/styles/styles.css
@@ -478,7 +478,24 @@ form {
           justify-content: space-between;
 }
 
-form input[type=email], form input[type=text] {
+form textarea {
+  width: 100%;
+  height: 200px;
+  margin-top: 30px;
+  border: 2px solid #86e0f9;
+  padding: 20px;
+  color: #fff;
+}
+
+form button {
+  margin: 40px 0;
+}
+
+.blog-form {
+  background: #0c1423;
+}
+
+.blog-form input[type=email], .blog-form input[type=text] {
   width: calc(50% - 20px);
   border: none;
   border-bottom: 2px solid #86e0f9;
@@ -487,15 +504,8 @@ form input[type=email], form input[type=text] {
   color: #fff;
 }
 
-form #comment, form #message {
-  width: 100%;
-  height: 200px;
-  margin-top: 30px;
-  border: 2px solid #86e0f9;
-}
-
-form button {
-  margin: 40px 0;
+.blog-form textarea {
+  background: #0c1423;
 }
 
 .contact-message {
@@ -508,11 +518,21 @@ form button {
 }
 
 .contact-message form input[type=email], .contact-message form input[type=text] {
+  width: calc(50% - 20px);
+  border: none;
+  border-bottom: 2px solid #86e0f9;
+  padding: 0 20px 20px;
+  background: #0f614e;
+  color: #fff;
+}
+
+.contact-message form textarea {
   background: #0f614e;
 }
 
 .contact-message form button {
   background: #0c1423;
+  margin-bottom: 0;
 }
 
 .blog-body {
@@ -585,7 +605,7 @@ form button {
   margin-right: 100px;
 }
 
-.blog-body article .blog-image::before {
+.blog-body .blog-image::before {
   content: '';
   height: 100%;
   width: 100%;
@@ -596,7 +616,7 @@ form button {
   z-index: -1;
 }
 
-.blog-body article .blog-text::before {
+.blog-body .blog-text::before {
   content: '';
   height: 120%;
   width: 100%;
@@ -607,24 +627,24 @@ form button {
   z-index: -10;
 }
 
-.blog-body article aside {
+.blog-body aside {
   width: 30%;
   position: relative;
   z-index: 10;
   height: 100%;
 }
 
-.blog-body article aside .aside-info {
+.blog-body aside .aside-info {
   margin-left: 100px;
   background: #0f614e;
   padding: 30px;
 }
 
-.blog-body article aside ul {
+.blog-body aside ul {
   margin: 30px 0;
 }
 
-.blog-body article aside ul li {
+.blog-body aside ul li {
   line-height: 32px;
   list-style-type: disc;
   padding-left: 10px;
@@ -658,7 +678,7 @@ form button {
 .contact-main .wrapper .contact-message {
   position: relative;
   top: -35vh;
-  left: 40px;
+  left: 60px;
   z-index: 10;
 }
 
@@ -671,6 +691,7 @@ form button {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  margin-right: 20px;
 }
 
 .contact-main .wrapper .contact-info .social-icons {
